--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,20 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.25</version>
+            <!-- <scope>test</scope> -->
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -70,6 +84,31 @@
                 <configuration>
                     <source>8</source>
                     <target>8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <outputDirectory>${basedir}/target/classes</outputDirectory>
+                    <resources>
+                        <resource>
+                            <directory>src/main/resources</directory>
+                            <includes>
+                                <include>**/*.*</include>
+                            </includes>
+                        </resource>
+                    </resources>
+                    <!--                    <outputDirectory>${basedir}/target/classes</outputDirectory>-->
+                    <!--                    <resources>-->
+                    <!--                        <resource>-->
+                    <!--                            <directory>src/main/java</directory>-->
+                    <!--                            <includes>-->
+                    <!--                                <include>**/*.txt</include>-->
+                    <!--                            </includes>-->
+                    <!--                        </resource>-->
+                    <!--                    </resources>-->
                 </configuration>
             </plugin>
         </plugins>
